--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 .sconsign.dblite
 abc.history
-*.asc
-*.bin
-*.blif
-*.rpt
-*.out
-*.vcd
+hardware.asc
+hardware.bin
+hardware.blif
+hardware.out
+hardware.rpt
+top_tb.out
+top_tb.vcd
